<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DicodingStory</string>
    <string name="package_name">com.kareemdev.dicodingstory</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="message_welcome">Message welcome</string>
    <string name="title_welcome_page">Title welcome page</string>
    <string name="message_welcome_page">Message welcome page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_pass">Minimum 6 Characters Password</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="user_created_at">%1$s</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="password_error_warning">Password minimal 6 karakter!</string>
    <string name="password_hint">Password</string>
    <string name="must_not_empty">\" tidak boleh kosong!\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isoFormat">yyyy-MM-dd\'T\'HH:mm:ss.SSSX</string>
    <string name="developer_name">Dicoding</string>
    <string name="date_dummy">20 April, 14:32</string>
    <string name="description">Description</string>
    <string name="login_sucess">Login berhasil!</string>
    <string name="failed_to_get_permissions">Gagal mendapatkan permission</string>
    <string name="failed_to_get_image">Gagal mendapatkan gambar!, silahkan coba lagi</string>


</resources>