<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="14dp">

    <ImageView
        android:src="@drawable/empty_img"
        android:id="@+id/storyImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:text="@string/developer_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyImageView" />

    <TextView
        android:id="@+id/tv_createdDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:text="@string/date_dummy"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createdDate" />




</androidx.constraintlayout.widget.ConstraintLayout>